--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,9 @@
 <div data-ax5layout="ax1" data-config='{control:"dock-panel"}' style="width: 600px;height: 600px;">
     <div data-dock-panel='{dock:"top", split:"true", height: 100}'></div>
     <div data-dock-panel='{dock:"left", split:true, width: 100}'></div>
-    <div data-dock-panel='{dock:"center"}'></div>
+    <div data-dock-panel='{dock:"center"}'>
+        <div data-dock-panel='{dock:"top", split:"true", height: 100}'></div>
+    </div>
 </div>
 
 <script>
