--- a/test/index.html
+++ b/test/index.html
@@ -16,12 +16,11 @@
 </head>
 <body style="padding: 50px;">
 
-<div data-ax5layout="ax1" data-config='{control:"dock-panel"}' style="width: 600px;height: 600px;">
+<div data-ax5layout="ax1" data-config='{control:"dock-panel"}' style="height: 600px;">
     <div data-dock-panel='{dock:"top", split:"true", height: 100}'></div>
-    <div data-dock-panel='{dock:"left", split:true, width: 100}'></div>
-    <div data-dock-panel='{dock:"center"}'>
-        <div data-dock-panel='{dock:"top", split:"true", height: 100}'></div>
-    </div>
+    <div data-dock-panel='{dock:"left", split:true, width: 200}'></div>
+    <div data-dock-panel='{dock:"right", split:true, width: 200}'></div>
+    <div data-dock-panel='{dock:"center"}'></div>
 </div>
 
 <script>
