--- a/test/index.html
+++ b/test/index.html
@@ -17,8 +17,9 @@
 <body style="padding: 50px;">
 
 <div data-ax5layout="ax1" data-config='{control:"dock-panel"}' style="height: 600px;">
-    <div data-dock-panel='{dock:"bottom", split:"true", height: 100}'></div>
-    <div data-dock-panel='{dock:"left", split:true, width: 200}'></div>
+    <div data-dock-panel='{dock:"top", split:false, height: 100}'></div>
+    <div data-dock-panel='{dock:"bottom", split:"false", height: 100}'></div>
+    <div data-dock-panel='{dock:"left", split:"true", width: 200}'></div>
     <div data-dock-panel='{dock:"right", split:true, width: 200}'></div>
     <div data-dock-panel='{dock:"center"}'></div>
 </div>
