--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,7 @@
         html, body {
             padding: 0;
             height: 100%;
+            overflow: hidden;
         }
     </style>
 </head>
