ax5layout limit resize

--- a/test/split.html
+++ b/test/split.html
@@ -24,11 +24,11 @@
 <body>
 
 <div data-ax5layout="ax1" data-config='{layout:"dock-panel"}' style="height: 100%;border:1px solid #ccc;">
-    <div data-dock-panel='{dock:"top", split:true, height: 200}'>
-        <div style="height:100%;border-bottom:1px solid #ccc;"></div>
+    <div data-dock-panel='{dock:"top", split:true, height: 100}'>
+        <div style="height:100%;border-bottom:1px solid #000;"></div>
     </div>
-    <div data-dock-panel='{dock:"bottom", split:"true", height: 200}'></div>
-    <div data-dock-panel='{dock:"left", split:true, width: 200}'></div>
+    <div data-dock-panel='{dock:"bottom", split:"true", height: 100}'></div>
+    <div data-dock-panel='{dock:"left", split:true, width: 100}'></div>
     <div data-dock-panel='{dock:"right", split:true, width: 200}' style="padding: 5px;">
 
         <div data-ax5layout="ax3" data-config='{layout:"dock-panel"}' style="height: 100%;border:1px solid #ccc;">
@@ -40,7 +40,7 @@
 
     </div>
     <div data-dock-panel='{dock:"center"}' style="padding: 5px;">
-<!--
+
         <div data-ax5layout="ax2" data-config='{layout:"dock-panel"}' style="height: 100%;border:1px solid #ccc;">
             <div data-dock-panel='{dock:"top", split:false, height: 100}'>
                 <div style="height:100%;border-bottom:1px solid #ccc;"></div>
@@ -50,11 +50,12 @@
 
             </div>
         </div>
--->
+
     </div>
 </div>
 
 <script>
+    // todo : limit resize
     jQuery(document.body).ready(function () {
         jQuery('[data-ax5layout="ax1"]').ax5layout({
             onResize: function () {
@@ -62,7 +63,6 @@
                 //console.log(this);
             }
         });
-        return;
         jQuery('[data-ax5layout="ax2"]').ax5layout({
             onResize: function () {
                 //console.log(this.$target);
@@ -72,7 +72,7 @@
 
         jQuery('[data-ax5layout="ax3"]').ax5layout();
         jQuery('[data-ax5layout="ax3"]').ax5layout("onResize", function () {
-            // console.log(this.$target);
+            console.log(this.$target);
         });
 
         // 특정 레이아웃 리사이즈 이벤트 호출 : jQuery('[data-ax5layout="ax1"]').ax5layout("resize");
