ax5layout limit resize min,max

--- a/test/index.html
+++ b/test/index.html
@@ -24,15 +24,15 @@
 <body>
 
 <div data-ax5layout="ax1" data-config='{layout:"dock-panel"}' style="height: 100%;border:1px solid #ccc;">
-    <div data-dock-panel='{dock:"top", split:true, height: 200}'>
+    <div data-dock-panel='{dock:"top", split:true, height: 200, maxHeight: 300}'>
         <div style="height:100%;border-bottom:1px solid #ccc;"></div>
     </div>
-    <div data-dock-panel='{dock:"bottom", split:"true", height: 200}'></div>
-    <div data-dock-panel='{dock:"left", split:true, width: 200}'></div>
-    <div data-dock-panel='{dock:"right", split:true, width: 200}' style="padding: 5px;">
+    <div data-dock-panel='{dock:"bottom", split:"true", height: 200, minHeight: 50, maxHeight: 300}'></div>
+    <div data-dock-panel='{dock:"left", split:true, width: 200, minWidth: 50, maxWidth: 300}'></div>
+    <div data-dock-panel='{dock:"right", split:true, width: 200, minWidth: 50, maxWidth: 300}'>
 
         <div data-ax5layout="ax3" data-config='{layout:"dock-panel"}' style="height: 100%;border:1px solid #ccc;">
-            <div data-dock-panel='{dock:"top", split:"true", height: 200}' style="padding: 5px;">
+            <div data-dock-panel='{dock:"top", split:"true", height: 200}'>
                 <div style="height:100%;border:1px solid #000;"></div>
             </div>
             <div data-dock-panel='{dock:"center"}'></div>
@@ -55,6 +55,7 @@
 </div>
 
 <script>
+    // todo : min, max size
     jQuery(document.body).ready(function () {
         jQuery('[data-ax5layout="ax1"]').ax5layout({
             onResize: function () {
