--- a/test/index.html
+++ b/test/index.html
@@ -30,32 +30,36 @@
     <div data-dock-panel='{dock:"bottom", split:"true", height: 200, minHeight: 50, maxHeight: 300}'></div>
     <div data-dock-panel='{dock:"left", split:true, width: 200, minWidth: 50, maxWidth: 300}'></div>
     <div data-dock-panel='{dock:"right", split:true, width: 200, minWidth: 50, maxWidth: 300}'>
-
-        <div data-ax5layout="ax3" data-config='{layout:"dock-panel"}' style="height: 100%;border:1px solid #ccc;">
-            <div data-dock-panel='{dock:"top", split:"true", height: 200}'>
-                <div style="height:100%;border:1px solid #000;"></div>
-            </div>
-            <div data-dock-panel='{dock:"center"}'></div>
-        </div>
-
+        <!--
+                <div data-ax5layout="ax3" data-config='{layout:"dock-panel"}' style="height: 100%;border:1px solid #ccc;">
+                    <div data-dock-panel='{dock:"top", split:"true", height: 200}'>
+                        <div style="height:100%;border:1px solid #000;"></div>
+                    </div>
+                    <div data-dock-panel='{dock:"center"}'></div>
+                </div>
+        -->
     </div>
     <div data-dock-panel='{dock:"center"}' style="padding: 5px;">
-<!--
-        <div data-ax5layout="ax2" data-config='{layout:"dock-panel"}' style="height: 100%;border:1px solid #ccc;">
-            <div data-dock-panel='{dock:"top", split:false, height: 100}'>
-                <div style="height:100%;border-bottom:1px solid #ccc;"></div>
-            </div>
-            <div data-dock-panel='{dock:"left", split:"true", width: 100}'></div>
-            <div data-dock-panel='{dock:"center"}' style="padding: 5px;">
 
-            </div>
-        </div>
--->
+        <button class="btn btn-default" data-btn="resize">크기변경</button>
+        <button class="btn btn-default" data-btn="reset">Reset</button>
+
+        <!--
+                <div data-ax5layout="ax2" data-config='{layout:"dock-panel"}' style="height: 100%;border:1px solid #ccc;">
+                    <div data-dock-panel='{dock:"top", split:false, height: 100}'>
+                        <div style="height:100%;border-bottom:1px solid #ccc;"></div>
+                    </div>
+                    <div data-dock-panel='{dock:"left", split:"true", width: 100}'></div>
+                    <div data-dock-panel='{dock:"center"}' style="padding: 5px;">
+
+                    </div>
+                </div>
+        -->
     </div>
 </div>
 
 <script>
-    // todo : min, max size
+    // todo : 반응형
     jQuery(document.body).ready(function () {
         jQuery('[data-ax5layout="ax1"]').ax5layout({
             onResize: function () {
@@ -63,6 +67,22 @@
                 //console.log(this);
             }
         });
+
+        $('[data-btn="resize"]').click(function () {
+            jQuery('[data-ax5layout="ax1"]').ax5layout("resize",
+                    {
+                        top: {height: 100},
+                        bottom: 100,
+                        left: 100,
+                        right: 100
+                    }
+            );
+        });
+        $('[data-btn="reset"]').click(function () {
+            jQuery('[data-ax5layout="ax1"]').ax5layout("reset");
+        });
+
+
         return;
         jQuery('[data-ax5layout="ax2"]').ax5layout({
             onResize: function () {
@@ -76,7 +96,7 @@
             // console.log(this.$target);
         });
 
-        // 특정 레이아웃 리사이즈 이벤트 호출 : jQuery('[data-ax5layout="ax1"]').ax5layout("resize");
+        // 특정 레이아웃 리사이즈 이벤트 호출 : jQuery('[data-ax5layout="ax1"]').ax5layout("align");
     });
 </script>
 
