layout split-panel

--- a/test/index.html
+++ b/test/index.html
@@ -59,6 +59,7 @@
 </div>
 
 <script>
+    // todo : splitter 이동 할 때 body select 방지
     jQuery(document.body).ready(function () {
         jQuery('[data-ax5layout="ax1"]').ax5layout({
             onResize: function () {
