--- a/test/index.html
+++ b/test/index.html
@@ -29,7 +29,7 @@
     </div>
     <div data-dock-panel='{dock:"bottom", split:"true", height: 200, minHeight: 50, maxHeight: 300}'></div>
     <div data-dock-panel='{dock:"left", split:true, width: 200, minWidth: 50, maxWidth: 300}'></div>
-    <div data-dock-panel='{dock:"right", split:true, width: 200, minWidth: 50, maxWidth: 300}'>
+    <div data-dock-panel='{dock:"right", split:true, width: "10%", minWidth: 50, maxWidth: 300}'>
         <!--
                 <div data-ax5layout="ax3" data-config='{layout:"dock-panel"}' style="height: 100%;border:1px solid #ccc;">
                     <div data-dock-panel='{dock:"top", split:"true", height: 200}'>
