--- a/test/split.html
+++ b/test/split.html
@@ -23,14 +23,12 @@
 </head>
 <body>
 
-<div data-ax5layout="ax1" data-config='{layout:"split-panel", oriental: "horizontal"}' style="height: 100%;border:1px solid #ccc;">
+<div data-ax5layout="ax1" data-config='{layout:"split-panel", oriental: "horizontal"}' style="height: 100%;">
     <div data-split-panel='{width: "30%"}'></div>
     <div data-splitter='{}'></div>
-    <div data-split-panel='{width: 200}'></div>
-    <div data-splitter='{}'></div>
-    <div data-split-panel='{width: 200}'>
+    <div data-split-panel='{width: "*"}'>
 
-        <div data-ax5layout="ax2" data-config='{layout:"split-panel", oriental: "vertical"}' style="height: 100%;border:1px solid #ccc;">
+        <div data-ax5layout="ax2" data-config='{layout:"split-panel", oriental: "vertical"}' style="height: 100%;">
             <div data-split-panel='{height: "30%"}'></div>
             <div data-splitter='{}'></div>
             <div data-split-panel='{height: 200}'></div>
@@ -39,10 +37,12 @@
         </div>
 
     </div>
+    <div data-splitter='{}'></div>
+    <div data-split-panel='{width: "200"}'></div>
 </div>
 
 <script>
-    // todo : limit resize
+    // todo : split - limit resize
     jQuery(document.body).ready(function () {
         jQuery('[data-ax5layout="ax1"]').ax5layout({
             onResize: function () {
