--- a/test/split.html
+++ b/test/split.html
@@ -42,7 +42,9 @@
 </div>
 
 <script>
-    // todo : split - limit resize
+    // todo : min & max size
+    // todo : panel show & hide
+
     jQuery(document.body).ready(function () {
         jQuery('[data-ax5layout="ax1"]').ax5layout({
             onResize: function () {
