ax5layout min,max ready

--- a/test/split.html
+++ b/test/split.html
@@ -38,7 +38,7 @@
 
     </div>
     <div data-splitter='{}'></div>
-    <div data-split-panel='{width: "200"}'></div>
+    <div data-split-panel='{width: "200", minWidth: 50, maxWidth: 300}'></div>
 </div>
 
 <script>
