--- a/test/split.html
+++ b/test/split.html
@@ -24,14 +24,14 @@
 <body>
 
 <div data-ax5layout="ax1" data-config='{layout:"split-panel", oriental: "horizontal"}' style="height: 100%;">
-    <div data-split-panel='{width: "30%"}'></div>
+    <div data-split-panel='{width: "30%", minWidth:50}'></div>
     <div data-splitter='{}'></div>
     <div data-split-panel='{width: "*"}'>
 
         <div data-ax5layout="ax2" data-config='{layout:"split-panel", oriental: "vertical"}' style="height: 100%;">
-            <div data-split-panel='{height: "30%"}'></div>
+            <div data-split-panel='{height: "30%", minHeight: 50}'></div>
             <div data-splitter='{}'></div>
-            <div data-split-panel='{height: 200}'></div>
+            <div data-split-panel='{height: 200, minHeight: 50}'></div>
             <div data-splitter='{}'></div>
             <div data-split-panel='{height: 200}'></div>
         </div>
@@ -42,7 +42,6 @@
 </div>
 
 <script>
-    // todo : min & max size
     // todo : panel show & hide
 
     jQuery(document.body).ready(function () {
