ax5layout@0.2.9 tab-panel active attribute bug fix

--- a/test/tab.html
+++ b/test/tab.html
@@ -30,17 +30,17 @@
 <body>
 
 <div data-ax5layout="ax2" data-config='{layout:"tab-panel"}' style="height:100%;">
-    <div data-tab-panel='{label: "Live Status"}' style="background: #eee;">
+    <div data-tab-panel='{label: "Live Status", active: "false"}' style="background: #eee;">
         <div style="padding: 10px;">
             Live Status Tab content
         </div>
     </div>
-    <div data-tab-panel='{label: "Social Network"}' style="background: #ccc;">
+    <div data-tab-panel='{label: "Social Network", active: "false"}' style="background: #ccc;">
         <div style="padding: 10px;">
             Social Network
         </div>
     </div>
-    <div data-tab-panel='{label: "Social Network"}' style="background: #ccc;">
+    <div data-tab-panel='{label: "Social Network", active: "true"}' style="background: #ccc;">
         <div style="padding: 10px;">
             Social Network
         </div>
