--- a/test/split-vertical.html
+++ b/test/split-vertical.html
@@ -24,7 +24,7 @@
 <body>
 
 <div data-ax5layout="ax1" data-config='{layout:"split-panel", oriental: "vertical"}' style="height: 100%;">
-    <div data-split-panel='{width: "300", minWidth:50}'></div>
+    <div data-split-panel='{width: "10%", minWidth:50}'></div>
     <div data-splitter='{}'></div>
     <div data-split-panel='{width: "*"}'>
 
