--- a/test/split-horizontal.html
+++ b/test/split-horizontal.html
@@ -30,23 +30,30 @@
 <body>
 
 <div data-ax5layout="ax2" data-config='{layout:"split-panel", oriental: "horizontal"}' style="height:100%;">
-    <div data-split-panel='{height: "*"}'>
+    <div data-split-panel='{height: "30%", minHeight: 100}'>
         123123123
     </div>
     <div data-splitter='{}'></div>
-    <div data-split-panel='{height: "*"}'>
-        12312
+    <div data-split-panel='{height: "*", minHeight: 100}'>
+        <div style="padding: 10px;height: 100%;">
+            <div style="border: 1px solid #000;height: 100%;"></div>
+        </div>
     </div>
 </div>
 <script>
     // todo : panel show & hide
     jQuery(document.body).ready(function () {
         jQuery('[data-ax5layout="ax2"]').ax5layout({
+            autoResize: false,
             onResize: function () {
                 //console.log(this.$target);
                 //console.log(this);
             }
         });
+
+        $(window).resize(function(){
+            jQuery('[data-ax5layout]').ax5layout("resize", true);
+        })
     });
 </script>
 
