ax5layout@0.3.3 fixed scss for CKEditor

--- a/test/split-vertical.html
+++ b/test/split-vertical.html
@@ -24,14 +24,18 @@
 <body>
 
 <div data-ax5layout="ax1" data-config='{layout:"split-panel", oriental: "vertical"}' style="height: 100%;">
-    <div data-split-panel='{width: "10%", minWidth:50}'></div>
+    <div data-split-panel='{width: "10%", minWidth:50}'>
+        <h1>H!</h1>
+    </div>
     <div data-splitter='{}'></div>
     <div data-split-panel='{width: "*"}'>
-
+        <h1>H2</h1>
 
     </div>
     <div data-splitter='{}'></div>
-    <div data-split-panel='{width: "200", minWidth: 50, maxWidth: 300}'></div>
+    <div data-split-panel='{width: "200", minWidth: 50, maxWidth: 300}'>
+        <h1>H2</h1>
+    </div>
 </div>
 
 <script>
