ax5layout oriental -> orientation

--- a/test/split-horizontal.html
+++ b/test/split-horizontal.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 
-<div data-ax5layout="ax2" data-config='{layout:"split-panel", oriental: "horizontal"}' style="height:100%;">
+<div data-ax5layout="ax2" data-config='{layout:"split-panel", orientation: "horizontal"}' style="height:100%;">
     <div data-split-panel='{height: "30%", minHeight: 100}'>
         123123123
     </div>
