--- a/test/split-vertical.html
+++ b/test/split-vertical.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-<div data-ax5layout="ax1" data-config='{layout:"split-panel", oriental: "vertical"}' style="height: 100%;">
+<div data-ax5layout="ax1" data-config='{layout:"split-panel", orientation: "vertical"}' style="height: 100%;">
     <div data-split-panel='{width: "10%", minWidth:50}'>
         <h1>H!</h1>
     </div>
