PATCH@ change ax5layout splitter css

--- a/test/index.html
+++ b/test/index.html
@@ -25,7 +25,7 @@
 
 <div data-ax5layout="ax1" data-config='{layout:"dock-panel"}' style="height: 100%;border:1px solid #ccc;">
     <div data-dock-panel='{dock:"top", split:true, height: 200, maxHeight: 300}'>
-        <div style="height:100%;border-bottom:1px solid #ccc;"></div>
+        <div style="height:100%;"></div>
     </div>
     <div data-dock-panel='{dock:"bottom", split:"true", height: 200, minHeight: 50, maxHeight: 300}'></div>
     <div data-dock-panel='{dock:"left", split:true, width: 200, minWidth: 50}'></div>
