PATCH@ fixed ax5select add setOptions method

--- a/test/tab.html
+++ b/test/tab.html
@@ -32,17 +32,212 @@
 <div data-ax5layout="ax2" data-config='{layout:"tab-panel"}' style="height:100%;">
     <div data-tab-panel='{label: "Live Status", "active": "false"}' style="background: #eee;">
         <div style="padding: 10px;">
-            Live Status Tab content
+
+            <form data-form-id="oci-login-form">
+                <div class="form-group">
+                    <label>TNS 이름</label>
+
+                    <div class="row">
+                        <div class="col-md-10">
+                            <select class="form-control"></select>
+                        </div>
+                        <div class="col-md-2">
+                            <button class="btn btn-default" type="button"><span class="sc sc-reload"></span></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label>사용자</label>
+                    <input type="text" class="form-control"/>
+                </div>
+                <div class="form-group">
+                    <label>암호</label>
+                    <input type="password" class="form-control"/>
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox"> 유니코드 사용
+                    </label>
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox"> 암호저장
+                    </label>
+                </div>
+
+                <div class="form-group">
+                    <label>접속모드</label>
+                    <select class="form-control inline"></select>
+                </div>
+
+                <div class="form-group">
+                    <label>Oracle 홈</label>
+                    <div class="row">
+                        <div class="col-md-10">
+                            <select class="form-control"></select>
+                        </div>
+                        <div class="col-md-2">
+                            <button class="btn btn-default" type="button">
+                                <span class="sc sc-folder-open"></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label>문자 집합</label>
+                    <select class="form-control inline"></select>
+                </div>
+                <div class="form-group">
+                    <label>날짜 형식</label>
+                    <select class="form-control inline"></select>
+                </div>
+
+                <hr class="split" />
+
+                <button type="button" class="btn btn-primary btn-block" data-modal-tool="oci-test">접속테스트</button>
+            </form>
+
         </div>
     </div>
     <div data-tab-panel='{label: "Social Network", "active": "false"}' style="background: #ccc;">
         <div style="padding: 10px;">
-            Social Network
+
+            <form data-form-id="oci-login-form">
+                <div class="form-group">
+                    <label>TNS 이름</label>
+
+                    <div class="row">
+                        <div class="col-md-10">
+                            <select class="form-control"></select>
+                        </div>
+                        <div class="col-md-2">
+                            <button class="btn btn-default" type="button"><span class="sc sc-reload"></span></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label>사용자</label>
+                    <input type="text" class="form-control"/>
+                </div>
+                <div class="form-group">
+                    <label>암호</label>
+                    <input type="password" class="form-control"/>
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox"> 유니코드 사용
+                    </label>
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox"> 암호저장
+                    </label>
+                </div>
+
+                <div class="form-group">
+                    <label>접속모드</label>
+                    <select class="form-control inline"></select>
+                </div>
+
+                <div class="form-group">
+                    <label>Oracle 홈</label>
+                    <div class="row">
+                        <div class="col-md-10">
+                            <select class="form-control"></select>
+                        </div>
+                        <div class="col-md-2">
+                            <button class="btn btn-default" type="button">
+                                <span class="sc sc-folder-open"></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label>문자 집합</label>
+                    <select class="form-control inline"></select>
+                </div>
+                <div class="form-group">
+                    <label>날짜 형식</label>
+                    <select class="form-control inline"></select>
+                </div>
+
+                <hr class="split" />
+
+                <button type="button" class="btn btn-primary btn-block" data-modal-tool="oci-test">접속테스트</button>
+            </form>
+
         </div>
     </div>
     <div data-tab-panel='{label: "Social Network", "active": "true"}' style="background: #ccc;">
         <div style="padding: 10px;">
-            Social Network
+
+            <form data-form-id="oci-login-form">
+                <div class="form-group">
+                    <label>TNS 이름</label>
+
+                    <div class="row">
+                        <div class="col-md-10">
+                            <select class="form-control"></select>
+                        </div>
+                        <div class="col-md-2">
+                            <button class="btn btn-default" type="button"><span class="sc sc-reload"></span></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label>사용자</label>
+                    <input type="text" class="form-control"/>
+                </div>
+                <div class="form-group">
+                    <label>암호</label>
+                    <input type="password" class="form-control"/>
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox"> 유니코드 사용
+                    </label>
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox"> 암호저장
+                    </label>
+                </div>
+
+                <div class="form-group">
+                    <label>접속모드</label>
+                    <select class="form-control inline"></select>
+                </div>
+
+                <div class="form-group">
+                    <label>Oracle 홈</label>
+                    <div class="row">
+                        <div class="col-md-10">
+                            <select class="form-control"></select>
+                        </div>
+                        <div class="col-md-2">
+                            <button class="btn btn-default" type="button">
+                                <span class="sc sc-folder-open"></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label>문자 집합</label>
+                    <select class="form-control inline"></select>
+                </div>
+                <div class="form-group">
+                    <label>날짜 형식</label>
+                    <select class="form-control inline"></select>
+                </div>
+
+                <hr class="split" />
+
+                <button type="button" class="btn btn-primary btn-block" data-modal-tool="oci-test">접속테스트</button>
+            </form>
+
         </div>
     </div>
 </div>
@@ -52,6 +247,7 @@
         jQuery('[data-ax5layout="ax2"]').ax5layout({
             onResize: function () {
                 //console.log(this.$target);
+
                 //console.log(this);
             },
             onOpenTab: function () {
